完善注册逻辑|修改参数验证库|新增gin参数绑定封装|其他完善
