# docs/swagger.json
@@ -15,8 +15,8 @@
         },
         "version": "0.0.1"
     },
-    "host": "127.0.0.1",
-    "basePath": "/api/v1",
+    "host": "127.0.0.1:8090",
+    "basePath": "/api/",
     "paths": {
         "/user/Get": {
             "get": {
@@ -32,6 +32,15 @@
                 ],
                 "summary": "根据id获取用户",
                 "operationId": "/user/Get",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success",
@@ -68,6 +77,15 @@
                 ],
                 "summary": "根据id删除用户",
                 "operationId": "/user/delete",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success",
@@ -106,12 +124,12 @@
                 "operationId": "/user/signup",
                 "parameters": [
                     {
-                        "description": "用户注册接口",
+                        "description": "body",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UserDto"
+                            "$ref": "#/definitions/model.SignUpParam"
                         }
                     }
                 ],
@@ -149,6 +167,31 @@
                     "type": "object"
                 },
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SignUpParam": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "nickName": {
+                    "description": "s",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "s",
+                    "type": "string"
+                },
+                "rePassword": {
+                    "description": "s",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "s",
                     "type": "string"
                 }
             }
